=== HEAD

* Add :concurrently option to Database#refresh_view on PostgreSQL to support concurrent refresh of materialized views (jeremyevans)

* Call the :after_connect Database option proc with both the connection and server/shard if it accepts 2 arguments (pedro, jeremyevans) (#813)

* Make multiple plugins set values before validation instead of before create, works better with auto_validations (jeremyevans)

* Support a default Dataset#import slice size, set to 500 on SQLite (jeremyevans) (#810)

* Make :read_only transaction option be per-savepoint on PostgreSQL (jeremyevans) (#807)

* Add :rank option to Dataset#full_text_search on PostgreSQL, to order by the ranking (jeremyevans) (#809)

* Remove methods deprecated in 4.10.0 (jeremyevans)

=== 4.10.0 (2014-05-01)

* Make Model.include API same as Module.include (ged) (#803)

* Dataset::PlaceholderLiteralizer now handles DelayedEvaluations correctly (jeremyevans)

* Refactor type conversion in the jdbc adapter, for up to a 20% speedup (jeremyevans)

* Add Dataset#with_fetch_size to jdbc adapter, for setting fetch size for JDBC ResultSets (jeremyevans)

* Default to a fetch_size of 100 in the jdbc/oracle adapter, similar to the oci8-based oracle adapter (jeremyevans)

* Add Database#fetch_size accessor and :fetch_size option to jdbc adapter, for setting JDBC Statement fetch size (jeremyevans)

* Automatically determine array type in pg_array_associations plugin, explicitly cast arrays in more places (jeremyevans, maccman) (#800)

* Speed up Dataset#literal for symbols 60% by caching results, speeding up dataset literalization up to 40% or more (jeremyevans)

* Speed up Sequel.split_symbol 10-20x by caching results, speeding up dataset literalization up to 80% or more (jeremyevans)

* Speed up dataset literalization for simple datasets by up to 100% (jeremyevans)

* Support :fractional_seconds Database option on MySQL 5.6.5+ to support fractional seconds by default (jeremyevans) (#797)
