@@ -122,6 +122,11 @@ module Sequel
         def uses_clob_for_text?
           true
         end
+
+        # HSQLDB supports views with check option.
+        def view_with_check_option_support
+          :local
+        end
       end
       
       # Dataset class for HSQLDB datasets accessed via JDBC.
