@@ -235,6 +235,11 @@ module Sequel
           select_map(:a__name).
           map{|n| m.call(n)}
       end
+      
+      # SQLAnywhere supports views with check option, but not local.
+      def view_with_check_option_support
+        true
+      end
     end
 
     module DatasetMethods
