@@ -1,5 +1,7 @@
 === HEAD
 
+* Add :check option to Database#create_view for WITH [LOCAL] CHECK OPTION support (jeremyevans)
+
 * Add :concurrently option to Database#refresh_view on PostgreSQL to support concurrent refresh of materialized views (jeremyevans)
 
 * Call the :after_connect Database option proc with both the connection and server/shard if it accepts 2 arguments (pedro, jeremyevans) (#813)
